@@ -1,3 +1,7 @@
+Sat Feb 20 20:54:26 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-revoke.c (netfs_S_io_revoke): Release lock before iteration. 
+
 1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* io-revoke.c (netfs_S_io_revoke): Fix typos.
